# finalProject

./: README.md  pyproject.toml  pytest.ini  requirements.txt
_notes/: poetry.rst
project/: botLib.py  config.py  db.db  dbManager.py  main.py
temp/: temp.txt
