[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["dadporosya <ilja.amogus@gmail.com>"]


readme = "README.md"
package-mode = false
requires-poetry = "2.3.2"

[tool.poetry.dependencies]
python = "3.13.12"
#
telebot = "0.0.5"
#sqlalchemy = "2.0.48"

#dependencies = [
#    "telebot (>=0.0.5,<0.0.6)",
#    "sqlalchemy (>=2.0.48,<3.0.0)"
#]

#[tool.poetry.group.dev.dependencies]
#pytest = "9.0.2"

#[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"
